[gd_scene load_steps=30 format=2]

[ext_resource path="res://cenas/UIPlanodeFundo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Imagens/Character/Idle/Idle-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Fontes/lady_radical/Lady Radical.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoTitle.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoMenu.png" type="Texture" id=5]
[ext_resource path="res://scripts/UIMenu.gd" type="Script" id=6]
[ext_resource path="res://Sons/MusicaHub.mp3" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 80 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="UIMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="UIPlanodeFundo" parent="." instance=ExtResource( 1 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 382.5, 207 )
scale = Vector2( 1.92188, 1.8875 )
frames = SubResource( 5 )
playing = true

[node name="PergaminhoTitle" type="Sprite" parent="."]
position = Vector2( 382.5, 79 )
scale = Vector2( 0.856808, 0.812883 )
texture = ExtResource( 4 )

[node name="LabelNomeJogo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -183.0
margin_right = 158.5
margin_bottom = -117.0
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 6 )
text = "Journey   Run"

[node name="PergaminhoMenu" type="Sprite" parent="."]
position = Vector2( 385, 364 )
scale = Vector2( 2.04242, 2.10185 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="ButtonJogar" type="Button" parent="."]
margin_left = 121.0
margin_top = 352.0
margin_right = 235.0
margin_bottom = 400.0
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 8 )
text = "Jogar"

[node name="ButtonConfiguracao" type="Button" parent="."]
margin_left = 247.0
margin_top = 352.0
margin_right = 391.0
margin_bottom = 399.0
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 9 )
text = "Ajustes"

[node name="ButtonCreditos" type="Button" parent="."]
margin_left = 383.0
margin_top = 351.0
margin_right = 559.0
margin_bottom = 398.0
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 9 )
text = "Creditos"

[node name="ButtonSair" type="Button" parent="."]
margin_left = 551.0
margin_top = 352.0
margin_right = 665.0
margin_bottom = 400.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 10 )
text = "Sair"

[node name="AudioHUB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0

[connection signal="pressed" from="ButtonJogar" to="." method="_on_ButtonJogar_pressed"]
[connection signal="pressed" from="ButtonConfiguracao" to="." method="_on_ButtonConfiguracao_pressed"]
[connection signal="pressed" from="ButtonCreditos" to="." method="_on_ButtonCreditos_pressed"]
[connection signal="pressed" from="ButtonSair" to="." method="_on_ButtonSair_pressed"]
